--- a/Form-Val.css/Formstyling.css
+++ b/Form-Val.css/Formstyling.css
@@ -7,11 +7,30 @@
 body{
     background: white;
 }
+label{
+    margin: auto;
+    padding-bottom: 10px;
+}
 
-.registration-form{
+div{
     max-width: 300px;
     margin: auto;
     border-radius: 5px;
     padding: 20px;
     background-color: #96bb96;
+}
+
+div h1{
+    padding: 15px;
+    font-size: 170%;
+}
+
+form p{
+    padding: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 100%;
+}
+
+.placeholder{
+    color: red;
 }
