--- a/Form-Val.css/Formstyling.css
+++ b/Form-Val.css/Formstyling.css
@@ -1,36 +1,38 @@
-*{
+* {
     padding: 0%;
     margin: 0%;
     font-family: sans-serif;
 }
 
-body{
+body {
     background: white;
 }
-label{
+
+label {
     margin: auto;
     padding-bottom: 10px;
 }
 
-div{
-    max-width: 300px;
+div {
+    max-width: 700px;
     margin: auto;
     border-radius: 5px;
-    padding: 20px;
+    padding: 10px;
     background-color: #96bb96;
+    text-align: justify;
 }
 
-div h1{
+div h1 {
     padding: 15px;
     font-size: 170%;
 }
 
-form p{
-    padding: 20px;
+form label {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
 }
 
-.placeholder{
+
+span {
     color: red;
 }
